Fixed wrong font path

--- a/src/style.css
+++ b/src/style.css
@@ -25,21 +25,21 @@
 
 @font-face {
   font-family: 'Roboto';
-  src: url('fonts/roboto/Roboto-Regular.woff2') format('woff2'), url('fonts/roboto/Roboto-Regular.woff') format('woff');
+  src: url('./fonts/roboto/Roboto-Regular.woff2') format('woff2'), url('./fonts/roboto/Roboto-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('fonts/roboto/Roboto-Bold.woff2') format('woff2'), url('fonts/roboto/Roboto-Bold.woff') format('woff');
+  src: url('./fonts/roboto/Roboto-Bold.woff2') format('woff2'), url('./fonts/roboto/Roboto-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Roboto';
-  src: url('fonts/roboto/Roboto-RegularItalic.woff2') format('woff2'), url('fonts/roboto/Roboto-RegularItalic.woff') format('woff');
+  src: url('./fonts/roboto/Roboto-RegularItalic.woff2') format('woff2'), url('./fonts/roboto/Roboto-RegularItalic.woff') format('woff');
   font-weight: 400;
   font-style: italic;
 }
